--- a/top/src/css/style.css
+++ b/top/src/css/style.css
@@ -1,8 +1,8 @@
 @charset "utf-8";
 
 body {
-    width: 980px;
-    margin: 0 auto;
+    /* width: 980px; */
+    margin: 0 5%;
     padding: 0;
     color: darkslategray;
 }
@@ -19,7 +19,7 @@ body {
 }
 
 .footer {
-    width: 980px;
+    /* width: 980px; */
     background-color: lightgray;
     height: 50px;
     margin-top: 10px;
@@ -72,7 +72,7 @@ p {
 }
 
 .nav ul li {
-    width: 195px;
+    width: 16.4%;
     float: left;
     margin-right: 1px;
     text-align: center;
